[Boyscout] Align all radio-groups to look/act the same

--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -23,6 +23,7 @@
               *ngFor="let option of question.options"
               color="light"
               lines="full"
+              class="ion-no-padding"
             >
               <ion-label class="ion-text-wrap ion-padding-end">{{ option.label }}</ion-label>
               <ion-radio
