--- a/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
+++ b/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
@@ -11,32 +11,40 @@
   </dialogue-turn>
   <dialogue-turn actor="self">
       <ion-radio-group (ionChange)="changeSignupSignin($event.detail.value)">
-        <ion-item color="light"
-                  class="ion-no-padding ion-text-wrap"
-                  [disabled]="typeChosen"
-                  lines="full"
+        <ion-item
+          color="light"
+          lines="full"
+          class="ion-no-padding"
         >
           <play-text-audio key="personal.signup-signin.create-id"
                            slot="start"
                            class="ion-no-margin ion-margin-end"
           ></play-text-audio>
-          <ion-label>{{ 'personal.signup-signin.create-id'|translate }}</ion-label>
-          <ion-radio [value]="idChoices.create"
-                     [checked]="signupSigninChoice === idChoices.create"
+          <ion-label class="ion-text-wrap ion-padding-end">
+            {{ 'personal.signup-signin.create-id'|translate }}
+          </ion-label>
+          <ion-radio
+            [value]="idChoices.create"
+            [checked]="signupSigninChoice === idChoices.create"
+            [disabled]="typeChosen"
           ></ion-radio>
         </ion-item>
-        <ion-item color="light"
-                  class="ion-no-padding ion-text-wrap"
-                  [disabled]="useLocalStorage || typeChosen"
-                  lines="full"
+        <ion-item
+          color="light"
+          class="ion-no-padding"
+          lines="full"
         >
           <play-text-audio key="personal.signup-signin.login-id"
                            slot="start"
                            class="ion-no-margin ion-margin-end"
           ></play-text-audio>
-          <ion-label>{{ 'personal.signup-signin.login-id'|translate }}</ion-label>
-          <ion-radio [value]="idChoices.login"
-                     [checked]="signupSigninChoice === idChoices.login"
+          <ion-label class="ion-text-wrap ion-padding-end">
+            {{ 'personal.signup-signin.login-id'|translate }}
+          </ion-label>
+          <ion-radio
+            [value]="idChoices.login"
+            [checked]="signupSigninChoice === idChoices.login"
+            [disabled]="useLocalStorage || typeChosen"
           ></ion-radio>
         </ion-item>
       </ion-radio-group>
