Add spacer to always allow for scrolling

--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -14,6 +14,11 @@
   margin: auto;
 }
 
+// Add enough spacing to content-area to always have something to scroll
+.scroll-spacing {
+  min-height: 30vh;
+}
+
 // Additional text-utility
 .ion-text-ellipsis {
   overflow: hidden;
