--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -1,5 +1,5 @@
 <section>
-  <dialogue-turn [actor]="program?.ngo">
+  <dialogue-turn>
     <p>
       <play-text-audio key="personal.select-fsp.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.select-fsp.introduction'|translate }}
@@ -41,8 +41,7 @@
       </ion-row>
     </form>
   </dialogue-turn>
-  <dialogue-turn [actor]="program?.ngo"
-                 *ngIf="fspSubmitted"
+  <dialogue-turn *ngIf="fspSubmitted"
                  [isSpoken]="fspSubmitted"
   >
     <p>
@@ -69,8 +68,7 @@
                  submitLabel="personal.select-fsp.attributes.submit"
     ></q-and-a-set>
 
-    <dialogue-turn [actor]="program?.ngo"
-                   *ngIf="showResultSuccess"
+    <dialogue-turn *ngIf="showResultSuccess"
                    [isSpoken]="showResultSuccess"
     >
       <p>
@@ -78,8 +76,7 @@
         {{ 'personal.select-fsp.attributes.success'|translate }}
       </p>
     </dialogue-turn>
-    <dialogue-turn [actor]="program?.ngo"
-                   *ngIf="showResultError"
+    <dialogue-turn *ngIf="showResultError"
                    [isSpoken]="showResultError"
     >
       <p>
