--- a/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="!isCanceled">
-  <dialogue-turn [actor]="ngo">
+  <dialogue-turn>
     <p>
       <play-text-audio key="personal.set-notification-number.introduction1" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.set-notification-number.introduction1'|translate }}
@@ -66,8 +66,7 @@
     </form>
 
   </dialogue-turn>
-  <dialogue-turn [actor]="ngo"
-                 *ngIf="hasValidationError"
+  <dialogue-turn *ngIf="hasValidationError"
                  [isSpoken]="hasValidationError"
   >
     <p>
@@ -75,8 +74,7 @@
       {{ 'personal.set-notification-number.validation.phone-number'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn [actor]="ngo"
-                 *ngIf="choiceMade"
+  <dialogue-turn *ngIf="choiceMade"
                  [isSpoken]="choiceMade"
   >
     <p *ngIf="!phoneSkipped">
