--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,6 +1,5 @@
 <section *ngIf="!isCanceled">
-  <dialogue-turn [actor]="currentProgram?.ngo"
-                 *ngIf="credentialReceived"
+  <dialogue-turn *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
     <p>
