--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -1,4 +1,4 @@
-<dialogue-turn [actor]="instanceInformation.name">
+<dialogue-turn>
   <p>
     <play-text-audio key="personal.create-identity.consent-question" class="ion-float-start ion-margin-end"></play-text-audio>
     <span [innerHTML]="'personal.create-identity.consent-question'|translate"></span>
