AB#3711 fix: fix test cases

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -6,7 +6,7 @@
 
   <more-info-button
     buttonKey="personal.create-identity.more-info-data-policy"
-    [message]="instanceInformation.dataPolicy"
+    [message]="instanceInformation?.dataPolicy"
     headingKey="personal.create-identity.more-info-data-policy"
   ></more-info-button>
 </dialogue-turn>
