Update text in "select-language"-component

--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -1,6 +1,7 @@
 <section #selectProgram>
   <dialogue-turn *ngIf="programs?.length"
                  [isSpoken]="programs?.length"
+                 isConnected="true"
   >
     <p>
       <play-text-audio key="personal.select-program.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
