--- a/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
+++ b/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
@@ -1,5 +1,5 @@
 <ion-item style="--inner-padding-end: 0;">
-  <ion-label position="stacked">
+  <ion-label *ngIf="label" position="stacked">
     {{ label }}
   </ion-label>
   <div style="display: flex; width: 100%;"
