Update text in "select-fsp"-component
Related AB#3757

--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -65,7 +65,7 @@
                  [(isSubmitted)]="isSubmitted"
                  [(isEditing)]="isEditing"
                  (submit)="submitCustomAttributes($event)"
-                 submitLabel="personal.select-fsp.attributes.submit"
+                 submitLabel="shared.submit-button"
     ></q-and-a-set>
 
     <dialogue-turn *ngIf="showResultSuccess"
