--- a/interfaces/PA-App/src/app/personal-components/login-identity/login-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/login-identity/login-identity.component.html
@@ -7,60 +7,66 @@
   </dialogue-turn>
   <dialogue-turn actor="self">
     <form (ngSubmit)="submitLoginCredentials(username,password)">
-      <div>
-        <div>
+      <div class="ion-margin-bottom">
+        <p>
           <play-text-audio key="personal.login-identity.supply-username" class="ion-margin-end"></play-text-audio>
           <ion-label>{{ 'personal.login-identity.supply-username'|translate }}</ion-label>
-          <ion-input type="text"
-                      name="username"
-                      [(ngModel)]="username"
-                      ngDefaultControl
-                      [disabled]="isDisabled"
-          ></ion-input>
-        </div>
-        <ion-row *ngIf="username && !usernameSubmitted"
-                 class="ion-nowrap ion-align-items-center ion-margin-top"
+
+        </p>
+        <ion-input
+          type="text"
+          name="username"
+          [(ngModel)]="username"
+          ngDefaultControl
+          [disabled]="isDisabled"
+        ></ion-input>
+        <ion-row
+          *ngIf="username && !usernameSubmitted"
+          class="ion-nowrap ion-align-items-center ion-margin-top"
         >
-          <play-text-audio key="personal.login-identity.submit-username"
-                           size="default"
-          ></play-text-audio>
-          <ion-button [disabled]="isInProgress || isDisabled"
-                      (click)="usernameSubmitted=true;"
-                      type="button"
-                      expand="block"
-                      style="flex-basis:100%"
-          >{{ 'personal.login-identity.submit-username'|translate }}</ion-button>
+          <play-text-audio key="shared.submit-button" size="default"></play-text-audio>
+          <ion-button
+            [disabled]="isInProgress || isDisabled"
+            (click)="usernameSubmitted=true;"
+            type="button"
+            expand="block"
+            style="flex-basis:100%"
+          >{{ 'shared.submit-button'|translate }}</ion-button>
         </ion-row>
       </div>
-      <div *ngIf="usernameSubmitted" class="ion-margin-bottom">
-        <play-text-audio key="personal.login-identity.supply-password" class="ion-margin-end"></play-text-audio>
-        <password-toggle-input name="password"
-                               [(ngModel)]="password"
-                               ngDefaultControl
-                               [disabled]="isDisabled"
-                               autocomplete="current-password"
-                               [label]="'personal.login-identity.supply-password'|translate"
-                               [labelShow]="'password-toggle.show'|translate"
-                               [labelHide]="'password-toggle.hide'|translate"
+      <div *ngIf="usernameSubmitted" class="ion-margin-vertical">
+        <p>
+          <play-text-audio key="personal.login-identity.supply-password" class="ion-margin-end"></play-text-audio>
+          <ion-label>{{ 'personal.login-identity.supply-password'|translate }}</ion-label>
+        </p>
+        <password-toggle-input
+          name="password"
+          [(ngModel)]="password"
+          ngDefaultControl
+          [disabled]="isDisabled"
+          autocomplete="current-password"
+          [labelShow]="'password-toggle.show'|translate"
+          [labelHide]="'password-toggle.hide'|translate"
         ></password-toggle-input>
       </div>
-      <ion-row *ngIf="password && !isDisabled"
-                class="ion-nowrap ion-align-items-center ion-margin-top"
+      <ion-row
+        *ngIf="password && !isDisabled"
+        class="ion-nowrap ion-align-items-center ion-margin-top"
       >
-        <play-text-audio key="personal.login-identity.submit-password"
-                         size="default"
-        ></play-text-audio>
-        <ion-button *ngIf="password && !isDisabled"
-                    [disabled]="isInProgress || isDisabled"
-                    type="submit"
-                    expand="block"
-                    style="flex-basis:100%"
-        >{{ 'personal.login-identity.submit-password'|translate }}</ion-button>
+        <play-text-audio key="shared.submit-button" size="default"></play-text-audio>
+        <ion-button
+          *ngIf="password && !isDisabled"
+          [disabled]="isInProgress || isDisabled"
+          type="submit"
+          expand="block"
+          style="flex-basis:100%"
+        >{{ 'shared.submit-button'|translate }}</ion-button>
       </ion-row>
     </form>
   </dialogue-turn>
-  <dialogue-turn *ngIf="incorrectCredentials"
-                 [isSpoken]="incorrectCredentials"
+  <dialogue-turn
+    *ngIf="incorrectCredentials"
+    [isSpoken]="incorrectCredentials"
   >
     <p>
       <play-text-audio key="personal.login-identity.incorrect-credentials" class="ion-float-start ion-margin-end"></play-text-audio>
