Fix: add label for password-only flow

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -56,8 +56,8 @@
   isConnected="true"
 >
   <p>
-    <play-text-audio key="personal.create-identity.password-only" class="ion-float-start ion-margin-end"></play-text-audio>
-    {{ 'personal.create-identity.password-only'|translate }}
+    <play-text-audio key="personal.create-identity.create-password-only" class="ion-float-start ion-margin-end"></play-text-audio>
+    {{ 'personal.create-identity.create-password-only'|translate }}
   </p>
 
   <more-info-button
