Reduce number of DOM-nodes/elements

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -94,7 +94,7 @@
 
 <ion-content color="medium" class="ion-padding-vertical">
 
-  <div #conversationContainer></div>
+  <ng-container #conversationContainer></ng-container>
 
   <div class="loading-indicator">
     <ion-spinner name="dots"
