Change loading+scrolling behaviour of PersonalPage

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -75,6 +75,13 @@
     </ion-button>
 
     <ion-button color="tertiary" size="small" fill="clear"
+                title="Scroll to last section"
+                (click)="scrollToLastSection()"
+    >
+      <ion-icon name="download" size="small" slot="icon-only"></ion-icon>
+    </ion-button>
+
+    <ion-button color="tertiary" size="small" fill="clear"
                 title="Clear conversation"
                 (click)="this.container.clear()"
     >
