Updated data policy text to personal information AB#3599

--- a/interfaces/PA-App/src/app/personal-components/consent-question/consent-question.component.html
+++ b/interfaces/PA-App/src/app/personal-components/consent-question/consent-question.component.html
@@ -5,9 +5,9 @@
   </p>
 
   <more-info-button
-    buttonKey="personal.consent-question.more-info-data-policy"
+    buttonKey="personal.consent-question.more-info-personal-information"
     [message]="instanceInformation?.dataPolicy"
-    headingKey="personal.consent-question.more-info-data-policy"
+    headingKey="personal.consent-question.more-info-personal-information"
   ></more-info-button>
 </dialogue-turn>
 <dialogue-turn actor="self">
