AB#3766 about-aid-program text via instance

--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -9,7 +9,7 @@
     </p>
 
     <more-info-button buttonKey="personal.select-program.more-info-programs"
-                      messageKey="personal.select-program.info-message"
+                      [message]="instanceInformation?.aboutProgram"
                       headingKey="personal.select-program.more-info-programs"
     ></more-info-button>
   </dialogue-turn>
