AB#3844 Fix translation+output of HTML-from db in contact-details-component

--- a/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.html
+++ b/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="!isCanceled">
   <dialogue-turn>
     <p
-      [innerHTML]="programDetails?.contactDetails"
+      [innerHTML]="contactDetails"
       class="contact-details--content"
     ></p>
   </dialogue-turn>
