--- a/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.scss
+++ b/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.scss
@@ -1,7 +1,6 @@
 .contact-details--content {
   // Style the inserted HTML from the database:
-  a[href^="https://wa.me/"]
-  {
+  a[href] {
     font-weight: bold;
     color: inherit;
     white-space: nowrap;
