--- a/interfaces/Referral-App/src/app/components/offer/offer.component.html
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.html
@@ -67,5 +67,12 @@
         <pre class="ion-margin">{{ offer.offerAddress }}</pre>
       </ion-label>
     </ion-item>
+    <ion-item *ngIf="offer.offerCapacity">
+      <ion-icon name="contacts" slot="start"></ion-icon>
+      <ion-label>
+        Capacity:
+        <pre class="ion-margin">{{ offer.offerCapacity }}</pre>
+      </ion-label>
+    </ion-item>
   </div>
 </div>
