feat: add new column for basic rights, formatting fixes

--- a/interfaces/Referral-App/src/app/components/category/category.component.scss
+++ b/interfaces/Referral-App/src/app/components/category/category.component.scss
@@ -30,5 +30,7 @@ ion-card-content {
   position: absolute;
   top: 0;
   left: 100px;
-  margin: 15px;
+  margin: 0 15px;
+  height: 150px;
+  overflow: auto;
 }
