--- a/interfaces/Referral-App/src/app/help/help.page.html
+++ b/interfaces/Referral-App/src/app/help/help.page.html
@@ -17,25 +17,39 @@
         <p>
           <ion-icon class="help-call-icon" name="call"></ion-icon> {{
           help.helpPhoneLabel }}:
-          <a href="tel:{{ help.helpPhone }}">{{ help.helpPhone }}</a>
+          <a href="tel:{{ help.helpPhone }}" (click)="logClick('phone')"
+            >{{ help.helpPhone }}</a
+          >
         </p>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <a href="{{ help.helpWhatsApp }}" *ngIf="help.helpWhatsApp">
+        <a
+          href="{{ help.helpWhatsApp }}"
+          *ngIf="help.helpWhatsApp"
+          (click)="logClick('whatsapp')"
+        >
           <ion-img
             class="help-social-image help-whatsapp-image"
             src="assets/icons/whatsapp.png"
           ></ion-img>
         </a>
-        <a href="{{ help.helpTwitter }}" *ngIf="help.helpTwitter">
+        <a
+          href="{{ help.helpTwitter }}"
+          *ngIf="help.helpTwitter"
+          (click)="logClick('twitter')"
+        >
           <ion-img
             class="help-social-image help-twitter-image"
             src="assets/icons/twitter.svg"
           ></ion-img>
         </a>
-        <a href="{{ help.helpFacebook }}" *ngIf="help.helpFacebook">
+        <a
+          href="{{ help.helpFacebook }}"
+          *ngIf="help.helpFacebook"
+          (click)="logClick('facebook')"
+        >
           <ion-img
             class="help-social-image help-facebook-image"
             src="assets/icons/facebook.png"
