--- a/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
+++ b/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
@@ -2,13 +2,13 @@
   #numericInput
   type="text"
   inputmode="numeric"
-  pattern="[0-9]+"
   [name]="name"
   [(ngModel)]="ngModel"
   [value]="value"
   [autocomplete]="autocomplete"
   [disabled]="disabled"
   [placeholder]="placeholder"
+  [pattern]="pattern ? pattern : '[0-9]+'"
   (ionInput)="onInput()"
   (ionChange)="onChange()"
   debounce="300"
