Refactor to more specific methods

--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -105,10 +105,10 @@
       </div>
     </dialogue-turn>
     <div
-      *ngIf="checkValidationErrors(question.code) && !isSubmitted"
+      *ngIf="checkValidationError(question.code) && !isSubmitted"
       class="ion-margin-bottom ion-padding-bottom"
     >
-      <dialogue-turn [isSpoken]="checkValidationErrors(question.code)">
+      <dialogue-turn [isSpoken]="checkValidationError(question.code)">
         <p *ngIf="(question.answerType === answerType.phoneNumber)">
           <play-text-audio key="q-and-a-set.validation.phone-number" class="ion-float-start ion-margin-end"></play-text-audio>
           {{ 'q-and-a-set.validation.phone-number'|translate }}
