AB#3653 Use instance-dataPolicy for multiple pop-ups
+ only show button when its contents are available

Related AB#3964

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -5,9 +5,11 @@
       <span [innerHTML]="'personal.enroll-in-program.introduction-information'|translate"></span>
     </p>
 
-    <more-info-button buttonKey="personal.enroll-in-program.more-info-questions"
-                      messageKey="personal.enroll-in-program.info-message"
-                      headingKey="personal.enroll-in-program.more-info-questions"
+    <more-info-button
+      *ngIf="instanceInformation?.dataPolicy"
+      buttonKey="personal.enroll-in-program.more-info-questions"
+      [message]="instanceInformation?.dataPolicy"
+      headingKey="personal.enroll-in-program.more-info-questions"
     ></more-info-button>
   </dialogue-turn>
 
