--- a/interfaces/PA-App/src/app/personal-components/consent-question/consent-question.component.html
+++ b/interfaces/PA-App/src/app/personal-components/consent-question/consent-question.component.html
@@ -5,6 +5,7 @@
   </p>
 
   <more-info-button
+    *ngIf="instanceInformation?.dataPolicy"
     buttonKey="personal.consent-question.more-info-personal-information"
     [message]="instanceInformation?.dataPolicy"
     headingKey="personal.consent-question.more-info-personal-information"
