AB#3912 Change position of contactDetails in flow

--- a/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.html
+++ b/interfaces/PA-App/src/app/personal-components/contact-details/contact-details.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="!isCanceled">
-  <dialogue-turn>
+  <dialogue-turn [isConnected]="true">
     <p
       [innerHTML]="contactDetails"
       class="contact-details--content"
