--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -19,7 +19,7 @@
                   class="ion-no-padding"
         >
           <ion-label class="ion-text-wrap ion-padding-end">
-            {{ fsp.fsp }}
+            {{ fsp.fspDisplayName }}
           </ion-label>
           <ion-radio [value]="fsp.id"
                      [checked]="(fsp.id === fspChoice)"
