--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -50,6 +50,28 @@
 
 // ----------------------------------------------------------------------------
 
+// Add tap-hint icon to all primary submit-buttons
+ion-button.button-block.button-solid:not([disabled]) {
+  position: relative;
+
+  --tap-icon-width: 20px;
+  --tap-icon-height: calc(var(--tap-icon-width) * 1.333);
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 8px;
+    width: var(--tap-icon-width);
+    height: var(--tap-icon-height);
+    transform: translateY(-50%);
+    background: transparent center center no-repeat;
+    background-size: 100% auto;
+    background-image: url('/assets/icons/hand-tap-white.svg');
+  }
+}
+
 // Override default styles to emphasize where to input
 // Make an exception for 'native' inputs in 'items':
 *:not(ion-item) > ion-input,
