--- a/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
+++ b/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
@@ -17,13 +17,17 @@
     *ngIf="inclusionStatus"
     [isSpoken]="inclusionStatus"
   >
-    <p *ngIf="inclusionStatusNegative">
+    <p 
+      *ngIf="inclusionStatusNegative"
+      [innerHTML]="'personal.handle-proof.inclusion-status-negative'|translate"
+    >
       <play-text-audio key="personal.handle-proof.inclusion-status-negative" class="ion-float-start ion-margin-end"></play-text-audio>
-      {{ 'personal.handle-proof.inclusion-status-negative'|translate }}
     </p>
-    <p *ngIf="inclusionStatusPositive">
+    <p 
+      *ngIf="inclusionStatusPositive"
+      [innerHTML]="'personal.handle-proof.inclusion-status-positive'|translate"
+    >
       <play-text-audio key="personal.handle-proof.inclusion-status-positive" class="ion-float-start ion-margin-end"></play-text-audio>
-      {{ 'personal.handle-proof.inclusion-status-positive'|translate }}
     </p>
   </dialogue-turn>
 </section>
