--- a/interfaces/PA-App/src/app/personal-components/consent-question/consent-question.component.html
+++ b/interfaces/PA-App/src/app/personal-components/consent-question/consent-question.component.html
@@ -16,29 +16,59 @@
     <play-text-audio key="personal.consent-question.answer" class="ion-float-start ion-margin-end"></play-text-audio>
     <span [innerHTML]="'personal.consent-question.answer'|translate"></span>
   </p>
-  <ion-row class="ion-nowrap ion-align-items-center">
-    <play-text-audio key="personal.consent-question.agree" size="default"></play-text-audio>
+
+  <ion-radio-group (ionChange)="changeConsent($event.detail.value)">
+    <ion-item
+      color="light"
+      lines="full"
+      class="ion-no-padding"
+    >
+      <play-text-audio
+        key="personal.consent-question.agree"
+        slot="start"
+        class="ion-no-margin ion-margin-end"
+      ></play-text-audio>
+      <ion-label class="ion-text-wrap ion-padding-end">
+        {{ 'personal.consent-question.agree'|translate }}
+      </ion-label>
+      <ion-radio
+        [value]="consentChoices.agree"
+        [checked]="userConsent === true"
+        [disabled]="isDisabled"
+      ></ion-radio>
+    </ion-item>
+    <ion-item
+      color="light"
+      class="ion-no-padding"
+      lines="full"
+    >
+      <play-text-audio
+        key="personal.consent-question.disagree"
+        slot="start"
+        class="ion-no-margin ion-margin-end"
+      ></play-text-audio>
+      <ion-label class="ion-text-wrap ion-padding-end">
+        {{ 'personal.consent-question.disagree'|translate }}
+      </ion-label>
+      <ion-radio
+        [value]="consentChoices.disagree"
+        [checked]="userConsent === false"
+        [disabled]="isDisabled"
+      ></ion-radio>
+    </ion-item>
+  </ion-radio-group>
+  <ion-row
+    *ngIf="(consentChoice || userConsent) && !isDisabled"
+    class="ion-nowrap ion-align-items-center ion-margin-top"
+  >
+    <play-text-audio key="shared.submit-button" size="default"></play-text-audio>
     <ion-button
       type="button"
-      (click)="consent(true)"
-      [disabled]="isDisabled || userConsent"
+      (click)="submitConsent()"
+      [disabled]="isDisabled || !consentChoice"
       expand="block"
-      style="flex-basis:100%;"
-    >
-      {{ 'personal.consent-question.agree'|translate }}
-    </ion-button>
+      style="flex-basis:100%"
+    >{{ 'shared.submit-button'|translate }}</ion-button>
   </ion-row>
-  <ion-row class="ion-nowrap ion-align-items-center">
-    <play-text-audio key="personal.consent-question.disagree" size="default"></play-text-audio>
-    <ion-button
-      type="button"
-      (click)="consent(false)"
-      [disabled]="isDisabled"
-      expand="block"
-      style="flex-basis:100%;"
-      fill="outline"
-    >
-      {{ 'personal.consent-question.disagree'|translate }}
-    </ion-button>
-  </ion-row>
+
 </dialogue-turn>
